--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Umar Bashiru <bashumar291@gmail.com>
-Rukaayat (WUMMY) Kaseem <kaseem.wummy@gmail.com>
+WUMMY Kaseem <kaseem.wummy@gmail.com>
